[tool.poetry]
name = "rberga06-matrix"
version = "0.0.1.dev0"
description = "A Matrix-style savescreen for the terminal, implemented in Python"
authors = ["RBerga06 <78449715+RBerga06@users.noreply.github.com>"]
license = "AGPL-3.0-or-later"
readme = "README.md"
packages = [{include = "rberga06_matrix"}]

[tool.poetry.dependencies]
python = "^3.12"
rich = "^13.4.1"
typer = "^0.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
