[tool.poetry]
name = "rberga06-matrix"
version = "1.0.0"
description = "A Matrix-style savescreen for the terminal, implemented in Python"
authors = ["RBerga06 <78449715+RBerga06@users.noreply.github.com>"]
license = "AGPL-3.0-or-later"
readme = "README.md"
packages = [{include = "rberga06", from = "src"}]
include = [
    "*.pxd",
]

[tool.poetry.dependencies]
python = "^3.11"
rich = "^13.4.1"
typer = "^0.9.0"
cython = {version = "^3.0.0b3", allow-prereleases = true}
numpy = "^1.24.3"

[tool.poetry.build]
script = "build.py"
generate-setup-file = true

[tool.poetry.scripts]
matrix = "rberga06.matrix.matrix:main"

[build-system]
requires = ["poetry-core", "setuptools", "cython >= 3.0.0b1"]
build-backend = "poetry.core.masonry.api"
